--- a/templates/base.html
+++ b/templates/base.html
@@ -210,7 +210,7 @@ h4 strong{
     <section id="footer" class="container mt-5">
       <div class="container mt-5">
       <div class="copyright">
-         <strong>&copy; 2024 Task Manager. | All rights reserved.</i></strong> 
+         <strong>&copy; 2024 Task Forge. | All rights reserved.</i></strong> 
         </div>
       </div>
   </section>
